<resources>
    <string name="app_name">FirstApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="firstName">First Name</string>
    <string name="password">Password</string>
    <string name="emailName">Email</string>
    <string name="lastName">Last Name</string>
    <string name="email">Email</string>
    <string name="formTitle">Test Form</string>
    <string name="gender">Gender</string>
    <string name="submit">Submit</string>
    <string name="title_activity_form_submit">FormSubmit</string>
</resources>
